Auto stash before rebase of "origin/ft-002"
GetRestaurants backing service

--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BackingServices\BackingServices.csproj" />
     <ProjectReference Include="..\Database\Database.csproj" />
   </ItemGroup>
 
