--- a/Practica 2 - Tec Web/Practica 3 - Tec Web.csproj
+++ b/Practica 2 - Tec Web/Practica 3 - Tec Web.csproj
@@ -16,5 +16,7 @@
     <ProjectReference Include="..\Logic\Logic.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
