--- a/Practica 2 - Tec Web/appsettings.json
+++ b/Practica 2 - Tec Web/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DBCAMPAINS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ConnectionString": "Server=(local);Initial Catalog=DBCampaigns;User ID=sa;Password=123456789;TrustServerCertificate=True;Connection Timeout=30;"
+
   }
 }
