--- a/Practica 2 - Tec Web/appsettings.json
+++ b/Practica 2 - Tec Web/appsettings.json
@@ -2,6 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      " Practica_3___Tec_Web.Controllers": "Information",
+      " Practica_3___Tec_Web.Controllers.CampaignsController": "Warning",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
